k3s/services/ntfy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
spec:
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
      - name: ntfy
        image: klutzer/ntfy
        args: ["serve"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: ntfy-local-data-volume
          mountPath: "/data/ntfy"
        - name: ntfy-local-etc-volume
          mountPath: "/etc/ntfy"
          readOnly: true
      volumes:
        - name: ntfy-local-data-volume
          persistentVolumeClaim:
            claimName: ntfy-local-data-pvc
        - name: ntfy-local-etc-volume
          configMap:
            name: ntfy
            items:
            - key: server.yml
              path: server.yml
