k3s/services/ntfy/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ntfy
  name: ntfy
spec:
  selector:
    app: ntfy
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
