k3s/services/ntfy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-ingress
  namespace: ntfy
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ntfy.homelab.kevin.lutzer.ca
    secretName: ntfy-homelab-kevin-lutzer-ca-tls
  rules:
  - host: ntfy.homelab.kevin.lutzer.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ntfy
              port:
                number: 80
